ProdIND/ProdPrograms/force-app/main/default/objects/D2C_BE_Master__c/D2C_BE_Master__c.object-meta.xml
<CustomObject>
    <description>This object is to store the master data for a BE.</description>
    <label>D2C BE Master</label>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>D2C BE Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>