ProdIND/ProdPrograms/force-app/main/default/objects/D2C_BE_Master__c/fields/Active_Flag__c.field-meta.xml
<CustomField>
    <fullName>Active_Flag__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active Flag</label>
    <type>Checkbox</type>
</CustomField>