ProdIND/ProdPrograms/force-app/main/default/objects/D2C_BE_Master__c/fields/PinCode_LastDigitRemoved__c.field-meta.xml
<CustomField>
    <fullName>PinCode_LastDigitRemoved__c</fullName>
    <formula>IF( ISPICKVAL( Product_Type__c, &apos;Two Wheeler&apos;),  FLOOR( Pin_Code__c /10) , 0)</formula>
    <label>PinCode_LastDigitRemoved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>